client: fixed bug on empty data Spread operator error when array is undefined: https://stackoverflow.com/questions/47155141/spreading-undefined-in-array-vs-object. Changed all to: [ ...(maybeArray || []) ]

--- a/ai20-lab04/src/app/tabs/students/students.component.css
+++ b/ai20-lab04/src/app/tabs/students/students.component.css
@@ -10,16 +10,12 @@ input {
   border: transparent;
 }
 
-.example-form {
+form {
   min-width: 150px;
   max-width: 500px;
   width: 800%;
 }
 
-.example-full-width {
-  width: 100%;
-}
-
-.student_div {
+div.student_tab {
   padding: 20px;
 }
